--- a/syncpixUI/package.json
+++ b/syncpixUI/package.json
@@ -20,5 +20,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
+  }
 }
