--- a/syncpixUI/package.json
+++ b/syncpixUI/package.json
@@ -19,7 +19,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-web": "~0.19.10",
     "expo-camera": "~15.0.7",
-    "expo-image": "~1.12.9"
+    "expo-image": "~1.12.9",
+    "expo-image-picker": "~15.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
