Сделал макет для попапа синхронизации, работаю над жестами

--- a/syncpixUI/app.json
+++ b/syncpixUI/app.json
@@ -1,6 +1,16 @@
 {
   "expo": {
     "name": "syncpixUI",
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photos",
+          "cameraPermission":"Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone"
+        }
+      ]
+    ],
     "slug": "syncpixUI",
     "version": "1.0.0",
     "orientation": "portrait",
