--- a/syncpixUI/package.json
+++ b/syncpixUI/package.json
@@ -11,16 +11,16 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "expo": "~51.0.2",
+    "expo-camera": "~15.0.7",
+    "expo-image": "~1.12.9",
+    "expo-image-picker": "~15.0.4",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-reanimated": "~3.10.1",
-    "react-native-web": "~0.19.10",
-    "expo-camera": "~15.0.7",
-    "expo-image": "~1.12.9",
-    "expo-image-picker": "~15.0.4"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
