--- a/syncpixUI/package.json
+++ b/syncpixUI/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.2",
     "expo-camera": "~15.0.7",
+    "expo-file-system": "^17.0.1",
     "expo-image": "~1.12.9",
     "expo-image-picker": "~15.0.4",
+    "expo-media-library": "^16.0.3",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
