--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ syncpixServer/app/__pycache__/__init__.cpython-39.pyc
 syncpixServer/app/__pycache__/config.cpython-39.pyc
 syncpixServer/app/__pycache__/main.cpython-39.pyc
 syncpixServer/log.txt
+syncpixServer/app/__pycache__/main.cpython-39.pyc
