--- a/syncpixUI/package.json
+++ b/syncpixUI/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.2",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~51.0.2",
     "expo-camera": "~15.0.7",
     "expo-file-system": "^17.0.1",
@@ -24,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-device-info": "^11.1.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-network-info": "^5.2.1",
     "react-native-reanimated": "~3.10.1",
