--- a/syncpixUI/package.json
+++ b/syncpixUI/package.json
@@ -20,6 +20,7 @@
     "expo-image": "~1.12.9",
     "expo-image-picker": "~15.0.4",
     "expo-media-library": "^16.0.3",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
