--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ syncpixServer/app/__pycache__/config.cpython-39.pyc
 syncpixServer/app/__pycache__/main.cpython-39.pyc
 syncpixServer/log.txt
 syncpixServer/app/__pycache__/main.cpython-39.pyc
+syncpixServer/app/__pycache__/__init__.cpython-312.pyc
+syncpixServer/app/__pycache__/config.cpython-312.pyc
+syncpixServer/app/__pycache__/main.cpython-312.pyc
